// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets submit button label to 'Save' when saving is false 1`] = `
<form
  onSubmit={[Function]}
>
  <h2>
    Add
     Recipe
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="title"
    >
      Title
    </label>
    <div
      className="field"
    >
      <input
        className="form-control my-2"
        name="title"
        onChange={[Function]}
        placeholder="Enter Recipe Title"
        type="text"
      />
    </div>
  </div>
  <div>
    <label
      htmlFor="authorId"
    >
      Author
    </label>
    <div
      className="field"
    >
      <select
        className="form-control my-2"
        name="authorId"
        onChange={[Function]}
        value=" "
      >
        <option
          value=""
        >
          Select Author
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="category"
    >
      Category
    </label>
    <div
      className="field"
    >
      <input
        className="form-control my-2"
        name="category"
        onChange={[Function]}
        placeholder="Enter Category"
        type="text"
      />
    </div>
  </div>
  <button
    className="btn btn-primary mt-3"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`sets submit button label to 'Saving...' when saving is true 1`] = `
<form
  onSubmit={[Function]}
>
  <h2>
    Add
     Recipe
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="title"
    >
      Title
    </label>
    <div
      className="field"
    >
      <input
        className="form-control my-2"
        name="title"
        onChange={[Function]}
        placeholder="Enter Recipe Title"
        type="text"
      />
    </div>
  </div>
  <div>
    <label
      htmlFor="authorId"
    >
      Author
    </label>
    <div
      className="field"
    >
      <select
        className="form-control my-2"
        name="authorId"
        onChange={[Function]}
        value=" "
      >
        <option
          value=""
        >
          Select Author
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="category"
    >
      Category
    </label>
    <div
      className="field"
    >
      <input
        className="form-control my-2"
        name="category"
        onChange={[Function]}
        placeholder="Enter Category"
        type="text"
      />
    </div>
  </div>
  <button
    className="btn btn-primary mt-3"
    disabled={true}
    type="submit"
  >
    Saving...
  </button>
</form>
`;
